--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <script src="game.js"></script>
+    <script src="game.js" type="module"></script>
 
 </body>
 </html>
